# ubb

./: .gitattributes  .gitignore  README.md
1st Semester/Algebra/P1 /: 1output.out  2output.out  3output.out  4output.out  5output.out
1st Semester/Algebra/P2/: 1output.out  2output.out  3output.out  4output.out  5output.out  P2.cpp
1st Semester/Algebra/P3/: 1output.out  2output.out  3output.out  4output.out  5output.out
1st Semester/Algebra/P4/: 1.out  2.out  3.out  4.out  5.out
1st Semester/Algebra/P5/: 1.out  2.out  3.out  4.out  5.out
1st Semester/CSA/Lab 11/: module_11.asm
1st Semester/CSA/Lab 4/: 11biti.asm
1st Semester/CSA/Lab 5/: 26.asm
1st Semester/Computer System Architecture/Lab 11/: 11main.asm
1st Semester/Computer System Architecture/Lab 3/: 11signedsimple.asm  11unsignedsimple.asm  26muldiv.asm  26signedsimple.asm
1st Semester/Computer System Architecture/Lab 4/: 26biti.asm
1st Semester/Computer System Architecture/Lab 5/: 11.asm
1st Semester/Computer System Architecture/Lab 6/: 26.asm  test.asm
1st Semester/FP/A4/: README.md
1st Semester/FP/A5/: README.md
1st Semester/FP/A6/: README.md
1st Semester/FP/A7/: students.json
1st Semester/FP/A8/: README.md
1st Semester/FP/A9/: README.md
1st Semester/Fundamentals of Programming/Practical Exam/: README.md
1st Semester/Mathematical Analysis/HW_Seminar_12/: main.py
1st Semester/Mathematical Analysis/HW_Seminar_4/: terms_initial_order.py
1st Semester/asc/lab 3/: 11multdiv.asm  26unsignedsimple.asm
2nd Semester/DSA/Set/: ExtendedTest.cpp  Set.cpp  Set.h
2nd Semester/Data Structures & Algorithms/A4/SortedSet/: App.cpp  CMakeLists.txt  ShortTest.cpp  SortedSet.h  SortedSetIterator.cpp  SortedSetIterator.h
2nd Semester/Dynamical Systems/: Lab 2.mw  Lab 4.mw  Lab 5.mw  Lab 6.mw  Test 1.mw  Test 2023.mw
2nd Semester/Graphs/: lab1.py
2nd Semester/Graphs/A1/: graph  graph.py  graph10k.out  random_graph1.txt  random_graph2.txt  service.py  ui.py
2nd Semester/Graphs/A2/: biconnected.txt  graph9_modif.txt  main.py  puzzle.py  random_graph1.txt  service.py  strongly.txt  ui.py  wolf_goat_cabbage.py
2nd Semester/Graphs/A3/: flux  flux.cpp  graph.cpp  graph.in  graph.py  graph6_modif.txt  main.py  maxflow.in  nminwalk.in  nwalks.in  results.txt  service.py  ui.py
2nd Semester/Graphs/A4-5/: graph.py  hamilton.in  main.py  not_dag.in  ui.py  (+3 more)
2nd Semester/OOP/A6/: CMakeLists.txt
2nd Semester/OOP/A6/src/service/: Service.cpp
2nd Semester/OOP/A7/: CMakeLists.txt  DBRepository.cpp  HTMLWatchList.cpp  Movie.h  MovieValidator.h  README.md  WatchList.cpp  WatchList.h  testService.cpp
2nd Semester/OOP/Lab Tests/T3 Practice/bills/: CMakeLists.txt
2nd Semester/Object Oriented Programming/A2-3/A2/: CMakeLists.txt  DynamicArray.c  README.md  Repository.h  Service.h  UI.h
2nd Semester/Object Oriented Programming/A4-5/A4/: CMakeLists.txt
2nd Semester/Object Oriented Programming/A4-5/A4/app/: main.cpp
2nd Semester/Object Oriented Programming/A4-5/A4/include/domain/: DynamicVector.h  Movie.h
2nd Semester/Object Oriented Programming/A4-5/A4/include/repository/: Repository.h
2nd Semester/Object Oriented Programming/A4-5/A4/include/service/: Service.h
2nd Semester/Object Oriented Programming/A4-5/A4/include/ui/: UI.h
2nd Semester/Object Oriented Programming/A4-5/A4/src/domain/: Movie.cpp
2nd Semester/Object Oriented Programming/A4-5/A4/src/ui/: UI.cpp
2nd Semester/Object Oriented Programming/A4-5/A4/tests/include/service/: testService.h
2nd Semester/Object Oriented Programming/A4-5/A4/tests/src/domain/: testDynamicVector.cpp  testMovie.cpp
2nd Semester/Object Oriented Programming/A8-9/A9/: AdminWidget.cpp  CMakeLists.txt  CSVWatchList.cpp  CSVWatchList.h  Exceptions.cpp  Exceptions.h  FileRepository.cpp  FileRepository.h  FileWatchList.cpp  FileWatchList.h  HTMLWatchList.cpp  HTMLWatchList.h  Movie.cpp  Movie.h  MovieValidator.cpp  MovieValidator.h  README.md  Repository.cpp  Repository.h  Service.cpp  Service.h  UI.cpp  UI.h  UserWidget.cpp  UserWidget.h  Utils.cpp  Utils.h  WatchList.cpp  WatchList.h  main.cpp  mainwindow.cpp  mainwindow.h  movies.txt  qcustomplot.cpp  testFile+HTML.txt  testMovie.h  testService.h
2nd Semester/Object Oriented Programming/Finals/Practical/Programmers/: CMakeLists.txt  Issue.h  Person.h  Session.cpp  Session.h  Window.h  main.cpp
2nd Semester/Object Oriented Programming/Finals/Practical/Stars/: Astronaut.h  AstronautWindow.cpp  CMakeLists.txt  Repository.cpp  Repository.h  Service.cpp  Star.h  astronauts.txt  main.cpp  stars.txt  starsModels.cpp
2nd Semester/Object Oriented Programming/Lab Tests/T3/: CMakeLists.txt  Repository.h  Service.cpp  Service.h  document.h  gui.cpp  gui.h
2nd Semester/Object Oriented Programming/Lab Tests/T3 Practice/shopping-list/: CMakeLists.txt  gui.cpp  repository.cpp
2nd Semester/Object Oriented Programming/Lab Tests/T3 Practice/test-model-oop/: CMakeLists.txt  cars.txt  gui.h  main.cpp  repo.cpp  service.cpp  service.h
2nd Semester/ds/: Lab 1.mw  Lab 3.mw  Lab 5.mw
2nd Semester/oop/a2-3/A3/: CMakeLists.txt
2nd Semester/oop/a2-3/A3/include/domain/: Operation.h
2nd Semester/oop/a2-3/A3/include/service/: Service.h
2nd Semester/oop/a2-3/A3/src/service/: Service.c
2nd Semester/oop/a2-3/A3/tests/include/domain/: DynamicArrayTest.h
2nd Semester/oop/a2-3/A3/tests/include/service/: ServiceTest.h
2nd Semester/oop/exams/practical/practical exam/: CMakeLists.txt  main.cpp  repository.cpp  repository.h
3rd Semester/Computer Networks/: README.md
3rd Semester/MAP/: README.md
3rd Semester/Probability and Statistics/: 10.m  2.m  4.m  5.m
3rd Semester/ps/: 14.m  15.m  3.m  lab6_1.m  lab6_2.m
4th Semester/AI/: scripts.sh
4th Semester/iss/: README.md
4th Semester/mpp/: README.md
5th Semester/Formal Languages and Compiler Design/: README.md
5th Semester/mobile/localdb+server/web_server/: Cargo.toml
5th Semester/mobile/localdb+server/web_server/src/: db.rs  main.rs  models.rs
5th Semester/pdp/lab8/: CMakeLists.txt  DSM.h  Subscriber.h  main.cpp  message.h
6th Semester/udllm/: README.md
(+1083 files in other folders)
