[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
dotenv = "0.15.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
rusqlite = { version = "0.32.0", features = ["bundled"] }
serde = {version = "1.0.216", features=["derive"]}
serde_json = "1.0.134"
thiserror = "2.0.9"
tracing = "0.1.41"
tracing-actix-web = "0.7.15"
tracing-subscriber = "0.3.19"


